# transformers2_electric_boogaloo

./: .gitignore  README.md  plot_results.py  pyproject.toml
configs/: config.yaml
configs/models/: corr_transformer.yaml  gru.yaml  ins_transformer.yaml  lev_transformer.yaml  lstm.yaml  rnn.yaml  transformer.yaml
data/: download_gutenberg_top_100.sh  remove_gutenberg_headers.sh
figs/: table.md
jobs/: args.txt  experiment.sh  job.job  run.job  run.sh
src/: logger.py  main.py  runner.py  utils.py  viz.py
src/dataset/: bpe_tokenizers.py  dataset.py
src/models/: correction_transformer.py  gru.py  insertion_transformer.py  levenshtein_transformer.py  lstm.py  rnn.py  transformer.py
