[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipdb>=0.13.13",
    "mlflow>=2.22.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "rouge-score>=0.1.2",
    "skeletonkey>=0.3.1.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchtyping>=0.1.5",
    "transformers>=4.51.3",
    "wandb>=0.19.11",
]
